--- a/style.css
+++ b/style.css
@@ -10,6 +10,19 @@
 h1 {
   font-weight: bold;
 }
+p {
+  text-align: justify;
+}
+
+body {
+  position: relative;
+  transition: background-image 0.5s ease-in-out;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
 .Title {
   font-size: 84px;
   margin-bottom: -15px;
@@ -70,12 +83,18 @@ nav button:hover {
 /*FACE*/
 .face {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: 50px;
+  left: 0;
   z-index: -1;
 }
 .face img {
-  width: 700px;
+  width: 500px;
+}
+
+/*FOOTER*/
+.footer {
+  font-size: 11px;
+  font-style: italic;
 }
 
 /*CURSOR*/
